--- a/www/deliver/style.css
+++ b/www/deliver/style.css
@@ -906,7 +906,7 @@ input#cancel-dupl{
 	bottom:0;
 	padding:calc(10px + 1vw);
 	border-radius: 0px;
-	max-height:320px;
+	min-height:350px;
 	height:50vh;
 }
 
@@ -986,8 +986,8 @@ input#cancel-dupl{
   display: block;
   float: left;
   max-width: 100% !important;
-  height: 30vh;
-  max-height: 250px;
+  height: 32vh;
+  min-height: 260px;
 }
 
 .deliver #deliver-deliverTable .dtsp-panesContainer .dtsp-titleRow {
