--- a/www/main/style.css
+++ b/www/main/style.css
@@ -117,6 +117,57 @@ button.blue:active {
 	transition:all 0.2s ease-out;
 }
 
+/* Loading*/
+
+#loading {
+	position: fixed;
+	display:block;
+	opacity: 0;
+	transition: all 0.1s ease-out;
+	z-index: 100;
+	visibility:hidden;
+}
+
+#loading .img-holder {
+	background-color: #FFF;
+	border-radius: 100%;
+	padding: 0px;
+	z-index: 1000000;
+	box-shadow: 3px 3px 40px rgba(0,0,0,0.2);
+	top: 50%;
+	left: 50%;
+	width: 50px;
+	height: 50px;
+	transform: translateX(-50%) translateY(-50%);
+	position: fixed;
+}
+
+#loading img {
+	width:100%;
+}
+
+#loading .loading-background {
+	position: fixed;
+	height: 100%;
+	width:100%;
+	background-color:rgba(0,0,0,0.7);
+}
+
+#loading.active {
+	display:block;
+	opacity:1;
+	transition:all 0.1s ease-out;
+	visibility:visible;
+}
+
+.shiny-busy #loading {
+	display:block;
+	opacity:1;
+	transition:all 0.1s ease-out;
+	visibility:visible;
+}
+
+
 /* MAIN MENU */
 
 #nav {
